--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,19 @@ body {
   background: rgb(8, 8, 8);
 }
 
+body::-webkit-scrollbar {
+  width: 0.45em;
+  background-color: rgb(8, 8, 8);
+} 
+body::-webkit-scrollbar-thumb {
+  background-color: #263d5c9c;
+  border-radius: 30px;
+} 
+body::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  background-color: rgb(8, 8, 8);
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
